--- a/src/app/clientes/cashback/cashback.component.css
+++ b/src/app/clientes/cashback/cashback.component.css
@@ -49,6 +49,7 @@
     border-top: 0;
     border-bottom: 1px solid var(--game);
     vertical-align: middle;
+    padding: 15px 10px;
 }
 
 .table tbody tr td:first-child span {
