--- a/src/app/clientes/cashback/cashback.component.html
+++ b/src/app/clientes/cashback/cashback.component.html
@@ -57,7 +57,7 @@
                     <button class="btn btn-custom" type="submit">{{'geral.filtrar' | translate}}</button>
                 </div>
             </form>
-            <div class="table-responsive only-desktop">
+            <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
