--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
@@ -108,7 +108,7 @@
                         </td>
                     </tr>
                 </ng-container>
-                <tr class="cupom" style="margin-top: 10px">
+                <tr *ngIf="!isShared" class="cupom" style="margin-top: 10px">
                     <td colspan="2" class="item" style="margin-left: 10px;">
                         <p>
                             {{'geral.status' | translate}}:
@@ -260,29 +260,40 @@
         </p>
     </div>
     <div class="button-container" style="display: flex; flex-direction: row; justify-content: space-around;">
-        <button *ngIf="podeEncerrar(aposta)" class="secondary-btn btn" (click)="repetirAposta(aposta)"
-            [disabled]="simulando || repeating">
-            {{ (repeating ? 'compartilhar_aposta.repetindoAposta' : 'compartilhar_aposta.repetirAposta') | translate }}
-        </button>
-        <button *ngIf="podeEncerrar(aposta)" class="btn btn-custom btn-block" (click)="encerrarAposta(aposta)"
-            [disabled]="simulando || repeating">
-            {{ (simulando ? 'compartilhar_aposta.calculando' : 'compartilhar_aposta.encerrarAposta') | translate }}
-        </button>
-        <button class="btn btn-outline-custom" *ngIf="itemSelecionado && !simulando && !falhaSimulacao"
-            (click)="descartar()">
-            {{ 'geral.cancelar' | translate }}
-        </button>
-        <button class="btn btn-custom" *ngIf="itemSelecionado && !falhaSimulacao && !process && !simulando"
-            (click)="confirmarEncerramento()">
-            {{ 'geral.confirmar' | translate }}
-        </button>
-        <button disabled class="btn btn-custom btn-block" *ngIf="!falhaSimulacao && encerrando;">
-            {{ 'compartilhar_aposta.encerrando' | translate }}
-            <i class="fa fa-spinner fa-spin"></i>
-        </button>
-        <button disabled class="btn btn-custom btn-block" *ngIf="!falhaSimulacao && process;">
-            {{ 'geral.processando' | translate }}... <span *ngIf="apostaAoVivo">({{delay}}) </span>
-            <i class="fa fa-spinner fa-spin"></i>
-        </button>
+        <ng-container *ngIf="!isShared; else redoSharedBet">
+            <button *ngIf="podeEncerrar(aposta)" class="secondary-btn btn" (click)="repetirAposta(aposta)"
+                [disabled]="simulando || repeating">
+                {{ (repeating ? 'compartilhar_aposta.repetindoAposta' : 'compartilhar_aposta.repetirAposta') | translate }}
+            </button>
+            <button *ngIf="podeEncerrar(aposta)" class="btn btn-custom btn-block" (click)="encerrarAposta(aposta)"
+                [disabled]="simulando || repeating">
+                {{ (simulando ? 'compartilhar_aposta.calculando' : 'compartilhar_aposta.encerrarAposta') | translate }}
+            </button>
+            <button class="btn btn-outline-custom" *ngIf="itemSelecionado && !simulando && !falhaSimulacao"
+                (click)="descartar()">
+                {{ 'geral.cancelar' | translate }}
+            </button>
+            <button class="btn btn-custom" *ngIf="itemSelecionado && !falhaSimulacao && !process && !simulando"
+                (click)="confirmarEncerramento()">
+                {{ 'geral.confirmar' | translate }}
+            </button>
+            <button disabled class="btn btn-custom btn-block" *ngIf="!falhaSimulacao && encerrando;">
+                {{ 'compartilhar_aposta.encerrando' | translate }}
+                <i class="fa fa-spinner fa-spin"></i>
+            </button>
+            <button disabled class="btn btn-custom btn-block" *ngIf="!falhaSimulacao && process;">
+                {{ 'geral.processando' | translate }}... <span *ngIf="apostaAoVivo">({{delay}}) </span>
+                <i class="fa fa-spinner fa-spin"></i>
+            </button>
+        </ng-container>
+        <ng-container #redoSharedBet>
+            <button class="btn btn-custom btn-block" (click)="repetirAposta(aposta)" *ngIf="podeRepetir(aposta); else cantRepeat"
+                [disabled]="simulando || repeating">
+                {{ (repeating ? 'compartilhar_aposta.repetindoAposta' : 'compartilhar_aposta.repetirAposta') | translate }}
+            </button>
+            <ng-template #cantRepeat>
+                <p style="text-align: center;">{{ 'compartilhar_aposta.apostaNaoPodeSerRepetida' | translate }}</p>
+            </ng-template>
+        </ng-container>
     </div>
 </div>
