--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -361,7 +361,7 @@ iframe{
         height: 100%;
         display: flex;
         flex-direction: column;
-        margin-bottom: 10px;
+        padding: 10px;
     }
 
     .game-view-mobile {
@@ -565,7 +565,7 @@ iframe{
         flex-wrap: wrap;
         width: 100%;
         height: auto;
-        padding: 30px 30px;
+        padding: 12px 12px 0 12px;
     }
 
     .card-centered {
@@ -594,7 +594,7 @@ iframe{
     .game-frame {
         width: 100%;
         margin: 0 20px;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
         height: 780px;
     }
 
@@ -839,7 +839,7 @@ iframe{
 
     .bloco {
         position: relative;
-        padding: 0 48px 24px 50px;
+        padding: 0 30px 24px 30px;
         margin: 0 auto;
         width: 100%;
     }
