--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -78,8 +78,7 @@ iframe{
     display: flex;
     justify-content: center;
     width: 100%;
-    /* height: 51px; */
-    /* margin-bottom: 12px; */
+    padding: 8.5px 16px;
     border: 1px solid #1B1B1B;
 }
 
@@ -243,6 +242,10 @@ iframe{
     padding-right: 8px;
 }
 
+#expanded-btn-game-opened, #expanded-btn-game-closed, #close-btn-game {
+    display: flex;
+}
+
 @media only screen and (max-width: 1024px) {
     .game-view {
         z-index: 10000;
@@ -351,7 +354,7 @@ iframe{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 10px;
+        padding: 8.5px 16px;
         background-color: #000;
         color: #fff;
     }
@@ -399,16 +402,22 @@ iframe{
 
     .buttons-game-view {
         display: flex;
-        gap: 10px;
     }
 
     .btn-cassino {
         cursor: pointer;
-        padding: 5px 10px;
         background-color: transparent;
         border: none;
         color: #fff;
         font-size: 16px;
+    }
+
+    #expanded-btn-game-opened, #expanded-btn-game-closed {
+        margin: 0 20px;
+    }
+
+    #expanded-btn-game-opened, #expanded-btn-game-closed, #close-btn-game {
+        display: flex;
     }
 
     .btn-cassino .game-close {
@@ -556,14 +565,15 @@ iframe{
         background-color: var(--highlight);
         color: var(--foreground-highlight);
         width: 82px;
-        padding: 7px 10px;
         text-align: center;
         justify-content: center;
         align-items: center;
-        gap: 10px;
         border-radius: 2px;
         font-size: 12px;
-        margin-top: 3.5px;
+    }
+
+    #deposit-btn p {
+        margin: 0;
     }
 
     .btn-custom, .btn-custom2 {
@@ -707,16 +717,11 @@ iframe{
         margin-left: 16px;
     }
 
-    .buttons-game-view a {
-        margin-right: 2px;
-    }
-
     .btn-cassino {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 45px;
-        height: 45px;
+        height: 20px;
         text-decoration: none;
         cursor: pointer;
         color: var(--foreground-inputs-odds);
@@ -888,6 +893,19 @@ iframe{
     .game-frame.in-game-is-tablet .game-view.in-game {
         padding: 0;
     }
+
+    #expanded-btn-game-opened-desktop, #expanded-btn-game-closed-desktop, 
+    #expanded-btn-game-opened-tablet, #expanded-btn-game-closed-tablet
+    {
+        margin: 0 16px;
+    }
+
+    #expanded-btn-game-opened-desktop, #expanded-btn-game-closed-desktop, #close-btn-game-desktop,
+    #expanded-btn-game-opened-tablet, #expanded-btn-game-closed-tablet, #close-btn-game-tablet
+    {
+        display: flex;
+    }
+
 }
 
 .modal-header{
