--- a/src/app/shared/layout/footer/footer.component.css
+++ b/src/app/shared/layout/footer/footer.component.css
@@ -113,7 +113,7 @@ footer {
     bottom: 12em;
     right: 20px;
 
-    color: var(--foreground-inputs-odds);
+    color: var(--highlight);
     text-decoration: none;
     cursor: pointer;
 
@@ -123,7 +123,7 @@ footer {
 
     background: #232629;
     border-radius: 4px;
-
+    border: 2px solid var(--highlight);
     height: 45px;
     width: 45px;
 }
