--- a/src/app/shared/layout/modals/cliente-senha-modal/cliente-senha-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-senha-modal/cliente-senha-modal.component.html
@@ -66,8 +66,9 @@
                     </button>
                 </div>
             </form>
-            <div #legitimuz id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && !verifiedIdentity">
+            <div *ngIf="faceMatchType == 'legitimuz'">
+                <div #legitimuz id="legitimuz-container"
+                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -75,6 +76,7 @@
                         </div>
                         <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
                             [value]="cliente.cpf" />
+                        <input type="hidden" id="legitimuz-ref-id" [value]="token">
                         <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                             <i class="fa-solid fa-id-card"></i>
                             {{'saques.identityVerify' | translate}}
@@ -83,7 +85,7 @@
                     <div id="legitimuz-root"></div>
                 </div>
                 <div #legitimuzLiveness id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && verifiedIdentity">
+                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -91,12 +93,28 @@
                         </div>
                         <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
                             [value]="cliente.cpf" />
+                        <input type="hidden" id="legitimuz-ref-id" [value]="token">
                         <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                             <i class="fa-solid fa-id-card"></i>
                             {{'saques.identityVerify' | translate}}
                         </button>
                     </div>
                     <div id="legitimuz-root"></div>
+                </div>
+                </div>
+                <div *ngIf="faceMatchType == 'docCheck'">
+                    <div #docCheck id="legitimuz">
+                        <div id="verify-identity-text">
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
+                            ('saques.identityVerifyNeeded' | translate)}}
+                        </div>
+                        <button id="exDocCheckAction" *ngIf="!disapprovedIdentity" [attr.data-ex-doccheck-document]="dataUserCPF"
+                            [attr.data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom"
+                            [attr.data-ex-doccheck-force-enrollment]="cliente.verifiedIdentity ? false : true">
+                            <i class="fa-solid fa-id-card"></i>
+                            {{'saques.identityVerify' | translate}}
+                        </button>
+                    </div>
                 </div>
         </div>
     </ng-container>
