--- a/src/app/shared/layout/footer/footer.component.css
+++ b/src/app/shared/layout/footer/footer.component.css
@@ -116,13 +116,20 @@ footer {
     text-decoration: none;
     cursor: pointer;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: var(--highlight);
-    border-radius: 4px;
-    border: 2px solid var(--highlight);
-    height: 45px;
-    width: 45px;
+    width: 50px;
+    height: 50px;
+    padding: 6px;
+    border-radius: 100px;
+    border: 1px solid rgba(255, 255, 255, 0.51);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.11) 0%, rgba(255, 255, 255, 0.29) 100%);
+    backdrop-filter: blur(10.350000381469727px);
+}
+
+.toTop i {
+    margin-bottom: -5px;
 }
 
 .toTop:hover {
