--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer>
     <a class="toTop" (click)="scrollToTop()" [ngStyle]="{'display': isToTopBtnVisible ? 'flex' : 'none'}">
         <i class="fa fa-angle-up"></i>
+        <i class="fa fa-angle-up"></i>
     </a>
     <div class="container">
         <div class="logo">
